Fix neural module after records migration