@@ -10,6 +10,19 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+
 compileKotlin {
     kotlinOptions.jvmTarget = "$javaVersionForKotlin"
 }
